Show Screen off FOD on all FOD devices
Otherwise it breaks on boot and needs to be re-enabled apparently

--- a/res/values/exui_strings.xml
+++ b/res/values/exui_strings.xml
@@ -552,7 +552,7 @@
 
     <!-- Screen off fod -->
     <string name="fod_gesture_title">Screen off fingerprint</string>
-    <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>
+    <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first (May not work on some devices)</string>
 
     <!-- Nightlight Fod -->
     <string name="fod_night_light_title">Disable night light when showing FOD</string>
